--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compile": "^0.0.2",
     "nodemon": "^2.0.9",
     "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.7",
     "sirv-cli": "^1.0.12",
     "systemjs": "^6.10.1"
   },
